Update gradle, dependencies, plugins. Refactor gradle scripts
- Switch to Kotlin
- Switch to using version catalog for dependencies
- Use java tolchain
- Remove lombok